déplacement du fichier html à la racine

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!--Icones-->
     <script src="https://kit.fontawesome.com/4c3e2d910f.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../images/Reservia.svg"> 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/Reservia.svg"> 
     <title>Reservia</title>
 </head>
 <body>
     <div id="container">
         <header>
-            <img src="../images/Reservia.svg" alt="logo Reservia" />
+            <img src="images/Reservia.svg" alt="logo Reservia" />
             <nav>
                 <ul>
                     <li id="acc_link"><a href="#accomodations">Hébergements</a></li> 
@@ -90,7 +90,7 @@
                     <div id="accomodation_results_container">
                         <a href="#">
                             <article id="accomodation_cannebiere">
-                                <img src="../images/accomodations/cannebiere.jpg" alt="photo d'illustration du logement"/>
+                                <img src="images/accomodations/cannebiere.jpg" alt="photo d'illustration du logement"/>
                                 <div class="accomodation_content">
                                     <h4>Auberge la Cannebière</h4>
                                     <p>Nuit à partir de <em class="price">25€</em></p>
@@ -102,7 +102,7 @@
                         </a>
                         <a href="#">
                             <article id="accomodation_port">
-                                <img src="../images/accomodations/port.jpg" alt="photo d'illustration du logement"/>
+                                <img src="images/accomodations/port.jpg" alt="photo d'illustration du logement"/>
                                 <div class="accomodation_content">
                                     <h4>Hôtel du Port</h4>
                                     <p>Nuit à partir de <em class="price">52€</em></p>
@@ -114,7 +114,7 @@
                         </a>    
                         <a href="#">
                             <article id="accomodation_mouettes">
-                                <img src="../images/accomodations/mouettes.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/mouettes.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel les Mouettes</h4>
                                     <p>Nuit à partir de <em class="price">76€</em></p>
@@ -126,7 +126,7 @@
                         </a>  
                         <a href="#">
                             <article id="accomodation_mer">
-                                <img src="../images/accomodations/mer.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/mer.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel de la Mer</h4>
                                     <p>Nuit à partir de <em class="price">48€</em></p>
@@ -138,7 +138,7 @@
                         </a> 
                         <a href="#">   
                             <article id="accomodation_panier">
-                               <img src="../images/accomodations/panier.jpg" alt="photo d'illustration du logement" />
+                               <img src="images/accomodations/panier.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Auberge le Panier</h4>
                                     <p>Nuit à partir de <em class="price">23€</em></p>
@@ -150,7 +150,7 @@
                         </a>
                         <a href="#">  
                             <article id="accomodation_amina">
-                                <img src="../images/accomodations/amina.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/amina.jpg" alt="photo d'illustration du logement" />
                                 <div class="accomodation_content">
                                     <h4>Hôtel chez Amina</h4>
                                     <p>Nuit à partir de <em class="price">96€</em></p>
@@ -173,7 +173,7 @@
                     <div id="popular_accomodation_container">
                         <a href="#">
                             <article id="pop_soleil">
-                                <img src="../images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/soleil_matin.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Hôtel le soleil du <br>matin</h4>
                                     <p>Nuit à partir de <em class="price">128€</em></p>
@@ -185,7 +185,7 @@
                         </a>
                         <a href="#">
                             <article id="pop_coeur">
-                                <img src="../images/accomodations/coeur_eau.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/coeur_eau.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Au coeur de l'eau <br>chambres d'hôtes</h4>
                                     <p>Nuit à partir de <em class="price">71€</em></p>
@@ -197,7 +197,7 @@
                         </a>
                         <a href="#">
                             <article id="pop_bleu">
-                                <img src="../images/accomodations/bleu_blanc_m.jpg" alt="photo d'illustration du logement" />
+                                <img src="images/accomodations/bleu_blanc_m.jpg" alt="photo d'illustration du logement" />
                                 <div class="popular_content">
                                     <h4>Hôtel tout bleu et <br>blanc</h4>
                                     <p>Nuit à partir de <em class="price">68€</em></p>
@@ -215,40 +215,40 @@
                 <div id="entertainments_container">
                     <a href="#">
                         <article id="entertain_port">
-                            <img src="../images/entertainments/vieux_port.jpg" alt="photo du vieux port"/>
+                            <img src="images/entertainments/vieux_port.jpg" alt="photo du vieux port"/>
                             <h4>Vieux Port</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
                             <article id="entertain_fort">
-                                <img src="../images/entertainments/fort_pomegues.jpg" alt="photo du fort de Pomègues" />
+                                <img src="images/entertainments/fort_pomegues.jpg" alt="photo du fort de Pomègues" />
                                 <h4>Fort de Pomègues</h4>
                             </article>
                         </a>
                         <a href="#">
                             <article id="entertain_frioul">
-                                <img src="../images/entertainments/iles_de_frioul.jpg" alt="photo des Îles du Frioul" />
+                                <img src="images/entertainments/iles_de_frioul.jpg" alt="photo des Îles du Frioul" />
                                 <h4>Îles du Frioul</h4>
                             </article>
                         </a>
                     </div>    
                     <a href="#">
                         <article id="entertain_calanques">
-                            <img src="../images/entertainments/calanques.jpg" alt="photo des Calanques" />
+                            <img src="images/entertainments/calanques.jpg" alt="photo des Calanques" />
                             <h4>Parc national des Calanques</h4>
                         </article>
                     </a>
                     <div>
                         <a href="#">
                             <article id="entertain_garde">
-                                <img src="../images/entertainments/notre-dame-de-la-garde.jpg" alt="photo de Notre-Dame-de-la-Garde" />
+                                <img src="images/entertainments/notre-dame-de-la-garde.jpg" alt="photo de Notre-Dame-de-la-Garde" />
                                 <h4>Notre-Dame-de-la-Garde</h4>
                             </article>
                         </a>
                         <a href="#">
                             <article id="entertain_longchamp">
-                                <img src="../images/entertainments/parc_longchamp.jpg" alt="photo du parc de Longchamp" />
+                                <img src="images/entertainments/parc_longchamp.jpg" alt="photo du parc de Longchamp" />
                                 <h4>Parc Longchamp</h4>
                             </article>
                         </a>
