--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <!--Police personnalisée -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">   
-    
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+
     <!--Icones-->
     <script src="https://kit.fontawesome.com/4c3e2d910f.js" crossorigin="anonymous"></script>
     
